--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A collection of knockout extenders and binding handlers",
   "main": "dist/knockout-toolbelt.min.js",
   "scripts": {
-    "test": "test"
+    "test": "grunt test"
   },
   "repository": {
     "type": "git",
