--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   },
   "homepage": "https://github.com/huochunpeng/knockout-toolbelt",
   "dependencies": {
-    "jasmine-reporters": "^2.0.0",
-    "jquery": "^1.11.1",
-    "knockout": "^3.1.0",
-    "underscore": "^1.6.0",
-    "underscore.string": "^2.3.3"
+    "jasmine-reporters": "~2.0.0",
+    "jquery": "~1.11.1",
+    "knockout": "~3.1.0",
+    "underscore": "~1.6.0",
+    "underscore.string": "~2.3.3"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.4.0",
-    "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-uglify": "^0.5.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-jasmine-node": "^0.2.1"
+    "grunt": "~0.4.5",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-jasmine-node": "~0.2.1"
   }
 }
