--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "**/.*",
     "node_modules",
     "bower_components",
-    "spec"
+    "spec",
+    "*.yml"
   ],
   "dependencies": {
     "knockout": "~3.1.0",
