fix grunt test. add bindingHandlers datepicker, fileupload (pending test).

--- a/bower.json
+++ b/bower.json
@@ -23,5 +23,8 @@
     "jquery": "~1.11.1",
     "underscore": "~1.6.0",
     "underscore.string": "~2.3.3"
+  },
+  "devDependencies": {
+    "jqueryui": "~1.11.0"
   }
 }
