--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ node_js:
   - "0.11"
 before_script:
   - npm install -g grunt-cli
+  - npm install -g bower
+  - bower install
 matrix:
   allow_failures:
     - node_js: "0.11"
