--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - "0.11"
 before_script:
   - npm install -g grunt-cli
+  - npm install -g karma-cli
   - npm install -g bower
   - bower install
 matrix:
