--- a/package.json
+++ b/package.json
@@ -29,20 +29,20 @@
   },
   "devDependencies": {
     "bower": "^1.3.8",
-    "docco": "~0.6.3",
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~0.4.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-docco": "~0.3.3",
-    "grunt-karma": "^0.8.3",
-    "karma": "^0.12.17",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-jasmine": "~0.2.0",
-    "karma-jasmine-ajax": "^0.1.4",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "^0.2.2",
-    "requirejs": "^2.1.14"
+    "docco": "0.6.3",
+    "grunt": "0.4.5",
+    "grunt-contrib-concat": "0.4.0",
+    "grunt-contrib-jshint": "0.10.0",
+    "grunt-contrib-uglify": "0.5.0",
+    "grunt-contrib-watch": "0.6.1",
+    "grunt-docco": "0.3.3",
+    "grunt-karma": "0.8.3",
+    "karma": "0.12.17",
+    "karma-chrome-launcher": "0.1.4",
+    "karma-jasmine": "0.2.0",
+    "karma-jasmine-ajax": "0.1.4",
+    "karma-phantomjs-launcher": "0.1.4",
+    "karma-requirejs": "0.2.2",
+    "requirejs": "2.1.14"
   }
 }
